# calculator-project

./: CMakeLists.txt  calculator.c  calculator.h  project.yml.txt
src/: calculator.c  calculator.h
